--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ mediapipe==0.10.7
 numpy==1.24.3
 tensorflow==2.13.0
 scikit-learn==1.3.0
-SpeechRecognition==3.10.0
-pydub==0.25.1
+# Speech/voice packages removed per feature removal
 trimesh==3.23.5
 pillow==10.0.1
 matplotlib==3.7.2
